cmd/cc/y.output
State 1 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 395 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: /* empty */
    2     | prog xdecl

    3 xdecl: zctlist ';'
    4      | zctlist xdlist ';'

    5 $@1: /* empty */

    6 $@2: /* empty */

    7 xdecl: zctlist xdecor $@1 pdecl $@2 block

    8 xdlist: xdecor

    9 $@3: /* empty */

   10 xdlist: xdecor $@3 '=' init
   11       | xdlist ',' xdlist

   12 xdecor: xdecor2
   13       | '*' zgnlist xdecor

   14 xdecor2: tag
   15        | '(' xdecor ')'
   16        | xdecor2 '(' zarglist ')'
   17        | xdecor2 '[' zexpr ']'

   18 adecl: ctlist ';'
   19      | ctlist adlist ';'

   20 adlist: xdecor

   21 $@4: /* empty */

   22 adlist: xdecor $@4 '=' init
   23       | adlist ',' adlist

   24 pdecl: /* empty */
   25      | pdecl ctlist pdlist ';'

   26 pdlist: xdecor
   27       | pdlist ',' pdlist

   28 $@5: /* empty */

   29 edecl: tlist $@5 zedlist ';'

   30 $@6: /* empty */

   31 edecl: edecl tlist $@6 zedlist ';'

   32 zedlist: /* empty */
   33        | edlist

   34 edlist: edecor
   35       | edlist ',' edlist

   36 edecor: xdecor
   37       | tag ':' lexpr
   38       | ':' lexpr

   39 abdecor: /* empty */
   40        | abdecor1

   41 abdecor1: '*' zgnlist
   42         | '*' zgnlist abdecor1
   43         | abdecor2

   44 abdecor2: abdecor3
   45         | abdecor2 '(' zarglist ')'
   46         | abdecor2 '[' zexpr ']'

   47 abdecor3: '(' ')'
   48         | '[' zexpr ']'
   49         | '(' abdecor1 ')'

   50 init: expr
   51     | '{' ilist '}'

   52 qual: '[' lexpr ']'
   53     | '.' ltag
   54     | qual '='

   55 qlist: init ','
   56      | qlist init ','
   57      | qual
   58      | qlist qual

   59 ilist: qlist
   60      | init
   61      | qlist init

   62 zarglist: /* empty */
   63         | arglist

   64 arglist: name
   65        | tlist abdecor
   66        | tlist xdecor
   67        | '.' '.' '.'
   68        | arglist ',' arglist

   69 block: '{' slist '}'

   70 slist: /* empty */
   71      | slist adecl
   72      | slist stmnt

   73 labels: label
   74       | labels label

   75 label: LCASE expr ':'
   76      | LDEFAULT ':'
   77      | LNAME ':'

   78 stmnt: error ';'
   79      | ulstmnt
   80      | labels ulstmnt

   81 forexpr: zcexpr
   82        | ctlist adlist

   83 ulstmnt: zcexpr ';'

   84 $@7: /* empty */

   85 ulstmnt: $@7 block
   86        | LIF '(' cexpr ')' stmnt
   87        | LIF '(' cexpr ')' stmnt LELSE stmnt

   88 $@8: /* empty */

   89 ulstmnt: $@8 LFOR '(' forexpr ';' zcexpr ';' zcexpr ')' stmnt
   90        | LWHILE '(' cexpr ')' stmnt
   91        | LDO stmnt LWHILE '(' cexpr ')' ';'
   92        | LRETURN zcexpr ';'
   93        | LSWITCH '(' cexpr ')' stmnt
   94        | LBREAK ';'
   95        | LCONTINUE ';'
   96        | LGOTO ltag ';'
   97        | LUSED '(' zelist ')' ';'
   98        | LSET '(' zelist ')' ';'

   99 zcexpr: /* empty */
  100       | cexpr

  101 zexpr: /* empty */
  102      | lexpr

  103 lexpr: expr

  104 cexpr: expr
  105      | cexpr ',' cexpr

  106 expr: xuexpr
  107     | expr '*' expr
  108     | expr '/' expr
  109     | expr '%' expr
  110     | expr '+' expr
  111     | expr '-' expr
  112     | expr LRSH expr
  113     | expr LLSH expr
  114     | expr '<' expr
  115     | expr '>' expr
  116     | expr LLE expr
  117     | expr LGE expr
  118     | expr LEQ expr
  119     | expr LNE expr
  120     | expr '&' expr
  121     | expr '^' expr
  122     | expr '|' expr
  123     | expr LANDAND expr
  124     | expr LOROR expr
  125     | expr '?' cexpr ':' expr
  126     | expr '=' expr
  127     | expr LPE expr
  128     | expr LME expr
  129     | expr LMLE expr
  130     | expr LDVE expr
  131     | expr LMDE expr
  132     | expr LLSHE expr
  133     | expr LRSHE expr
  134     | expr LANDE expr
  135     | expr LXORE expr
  136     | expr LORE expr

  137 xuexpr: uexpr
  138       | '(' tlist abdecor ')' xuexpr
  139       | '(' tlist abdecor ')' '{' ilist '}'

  140 uexpr: pexpr
  141      | '*' xuexpr
  142      | '&' xuexpr
  143      | '+' xuexpr
  144      | '-' xuexpr
  145      | '!' xuexpr
  146      | '~' xuexpr
  147      | LPP xuexpr
  148      | LMM xuexpr
  149      | LSIZEOF uexpr
  150      | LSIGNOF uexpr

  151 pexpr: '(' cexpr ')'
  152      | LSIZEOF '(' tlist abdecor ')'
  153      | LSIGNOF '(' tlist abdecor ')'
  154      | pexpr '(' zelist ')'
  155      | pexpr '[' cexpr ']'
  156      | pexpr LMG ltag
  157      | pexpr '.' ltag
  158      | pexpr LPP
  159      | pexpr LMM
  160      | name
  161      | LCONST
  162      | LLCONST
  163      | LUCONST
  164      | LULCONST
  165      | LDCONST
  166      | LFCONST
  167      | LVLCONST
  168      | LUVLCONST
  169      | string
  170      | lstring

  171 string: LSTRING
  172       | string LSTRING

  173 lstring: LLSTRING
  174        | lstring LLSTRING

  175 zelist: /* empty */
  176       | elist

  177 elist: expr
  178      | elist ',' elist

  179 @9: /* empty */

  180 sbody: '{' @9 edecl '}'

  181 zctlist: /* empty */
  182        | ctlist

  183 types: complex
  184      | tname
  185      | gcnlist
  186      | complex gctnlist
  187      | tname gctnlist
  188      | gcnlist complex zgnlist
  189      | gcnlist tname
  190      | gcnlist tname gctnlist

  191 tlist: types

  192 ctlist: types

  193 complex: LSTRUCT ltag

  194 $@10: /* empty */

  195 complex: LSTRUCT ltag $@10 sbody
  196        | LSTRUCT sbody
  197        | LUNION ltag

  198 $@11: /* empty */

  199 complex: LUNION ltag $@11 sbody
  200        | LUNION sbody
  201        | LENUM ltag

  202 $@12: /* empty */

  203 $@13: /* empty */

  204 complex: LENUM ltag $@12 '{' $@13 enum '}'

  205 $@14: /* empty */

  206 complex: LENUM '{' $@14 enum '}'
  207        | LTYPE

  208 gctnlist: gctname
  209         | gctnlist gctname

  210 zgnlist: /* empty */
  211        | zgnlist gname

  212 gctname: tname
  213        | gname
  214        | cname

  215 gcnlist: gcname
  216        | gcnlist gcname

  217 gcname: gname
  218       | cname

  219 enum: LNAME
  220     | LNAME '=' expr
  221     | enum ','
  222     | enum ',' enum

  223 tname: LCHAR
  224      | LSHORT
  225      | LINT
  226      | LLONG
  227      | LSIGNED
  228      | LUNSIGNED
  229      | LFLOAT
  230      | LDOUBLE
  231      | LVOID

  232 cname: LAUTO
  233      | LSTATIC
  234      | LEXTERN
  235      | LTYPEDEF
  236      | LTYPESTR
  237      | LREGISTER
  238      | LINLINE

  239 gname: LCONSTNT
  240      | LVOLATILE
  241      | LRESTRICT

  242 name: LNAME

  243 tag: ltag

  244 ltag: LNAME
  245     | LTYPE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 145
'%' (37) 109
'&' (38) 120 142
'(' (40) 15 16 45 47 49 86 87 89 90 91 93 97 98 138 139 151 152 153
    154
')' (41) 15 16 45 47 49 86 87 89 90 91 93 97 98 138 139 151 152 153
    154
'*' (42) 13 41 42 107 141
'+' (43) 110 143
',' (44) 11 23 27 35 55 56 68 105 178 221 222
'-' (45) 111 144
'.' (46) 53 67 157
'/' (47) 108
':' (58) 37 38 75 76 77 125
';' (59) 3 4 18 19 25 29 31 78 83 89 91 92 94 95 96 97 98
'<' (60) 114
'=' (61) 10 22 54 126 220
'>' (62) 115
'?' (63) 125
'[' (91) 17 46 48 52 155
']' (93) 17 46 48 52 155
'^' (94) 121
'{' (123) 51 69 139 180 204 206
'|' (124) 122
'}' (125) 51 69 139 180 204 206
'~' (126) 146
error (256) 78
LORE (258) 136
LXORE (259) 135
LANDE (260) 134
LLSHE (261) 132
LRSHE (262) 133
LMDE (263) 131
LDVE (264) 130
LMLE (265) 129
LME (266) 128
LPE (267) 127
LOROR (268) 124
LANDAND (269) 123
LNE (270) 119
LEQ (271) 118
LGE (272) 117
LLE (273) 116
LRSH (274) 112
LLSH (275) 113
LMG (276) 156
LPP (277) 147 158
LMM (278) 148 159
LNAME (279) 77 219 220 242 244
LTYPE (280) 207 245
LFCONST (281) 166
LDCONST (282) 165
LCONST (283) 161
LLCONST (284) 162
LUCONST (285) 163
LULCONST (286) 164
LVLCONST (287) 167
LUVLCONST (288) 168
LSTRING (289) 171 172
LLSTRING (290) 173 174
LAUTO (291) 232
LBREAK (292) 94
LCASE (293) 75
LCHAR (294) 223
LCONTINUE (295) 95
LDEFAULT (296) 76
LDO (297) 91
LDOUBLE (298) 230
LELSE (299) 87
LEXTERN (300) 234
LFLOAT (301) 229
LFOR (302) 89
LGOTO (303) 96
LIF (304) 86 87
LINT (305) 225
LLONG (306) 226
LREGISTER (307) 237
LRETURN (308) 92
LSHORT (309) 224
LSIZEOF (310) 149 152
LUSED (311) 97
LSTATIC (312) 233
LSTRUCT (313) 193 195 196
LSWITCH (314) 93
LTYPEDEF (315) 235
LTYPESTR (316) 236
LUNION (317) 197 199 200
LUNSIGNED (318) 228
LWHILE (319) 90 91
LVOID (320) 231
LENUM (321) 201 204 206
LSIGNED (322) 227
LCONSTNT (323) 239
LVOLATILE (324) 240
LSET (325) 98
LSIGNOF (326) 150 153
LRESTRICT (327) 241
LINLINE (328) 238


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
prog (99)
    on left: 1 2, on right: 0 2
xdecl (100)
    on left: 3 4 7, on right: 2
$@1 (101)
    on left: 5, on right: 7
$@2 (102)
    on left: 6, on right: 7
xdlist (103)
    on left: 8 10 11, on right: 4 11
$@3 (104)
    on left: 9, on right: 10
xdecor (105)
    on left: 12 13, on right: 7 8 10 13 15 20 22 26 36 66
xdecor2 (106)
    on left: 14 15 16 17, on right: 12 16 17
adecl (107)
    on left: 18 19, on right: 71
adlist (108)
    on left: 20 22 23, on right: 19 23 82
$@4 (109)
    on left: 21, on right: 22
pdecl (110)
    on left: 24 25, on right: 7 25
pdlist (111)
    on left: 26 27, on right: 25 27
edecl (112)
    on left: 29 31, on right: 31 180
$@5 (113)
    on left: 28, on right: 29
$@6 (114)
    on left: 30, on right: 31
zedlist (115)
    on left: 32 33, on right: 29 31
edlist (116)
    on left: 34 35, on right: 33 35
edecor (117)
    on left: 36 37 38, on right: 34
abdecor (118)
    on left: 39 40, on right: 65 138 139 152 153
abdecor1 (119)
    on left: 41 42 43, on right: 40 42 49
abdecor2 (120)
    on left: 44 45 46, on right: 43 45 46
abdecor3 (121)
    on left: 47 48 49, on right: 44
init (122)
    on left: 50 51, on right: 10 22 55 56 60 61
qual (123)
    on left: 52 53 54, on right: 54 57 58
qlist (124)
    on left: 55 56 57 58, on right: 56 58 59 61
ilist (125)
    on left: 59 60 61, on right: 51 139
zarglist (126)
    on left: 62 63, on right: 16 45
arglist (127)
    on left: 64 65 66 67 68, on right: 63 68
block (128)
    on left: 69, on right: 7 85
slist (129)
    on left: 70 71 72, on right: 69 71 72
labels (130)
    on left: 73 74, on right: 74 80
label (131)
    on left: 75 76 77, on right: 73 74
stmnt (132)
    on left: 78 79 80, on right: 72 86 87 89 90 91 93
forexpr (133)
    on left: 81 82, on right: 89
ulstmnt (134)
    on left: 83 85 86 87 89 90 91 92 93 94 95 96 97 98, on right: 79
    80
$@7 (135)
    on left: 84, on right: 85
$@8 (136)
    on left: 88, on right: 89
zcexpr (137)
    on left: 99 100, on right: 81 83 89 92
zexpr (138)
    on left: 101 102, on right: 17 46 48
lexpr (139)
    on left: 103, on right: 37 38 52 102
cexpr (140)
    on left: 104 105, on right: 86 87 90 91 93 100 105 125 151 155
expr (141)
    on left: 106 107 108 109 110 111 112 113 114 115 116 117 118 119
    120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135
    136, on right: 50 75 103 104 107 108 109 110 111 112 113 114 115
    116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131
    132 133 134 135 136 177 220
xuexpr (142)
    on left: 137 138 139, on right: 106 138 141 142 143 144 145 146
    147 148
uexpr (143)
    on left: 140 141 142 143 144 145 146 147 148 149 150, on right:
    137 149 150
pexpr (144)
    on left: 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    165 166 167 168 169 170, on right: 140 154 155 156 157 158 159
string (145)
    on left: 171 172, on right: 169 172
lstring (146)
    on left: 173 174, on right: 170 174
zelist (147)
    on left: 175 176, on right: 97 98 154
elist (148)
    on left: 177 178, on right: 176 178
sbody (149)
    on left: 180, on right: 195 196 199 200
@9 (150)
    on left: 179, on right: 180
zctlist (151)
    on left: 181 182, on right: 3 4 7
types (152)
    on left: 183 184 185 186 187 188 189 190, on right: 191 192
tlist (153)
    on left: 191, on right: 29 31 65 66 138 139 152 153
ctlist (154)
    on left: 192, on right: 18 19 25 82 182
complex (155)
    on left: 193 195 196 197 199 200 201 204 206 207, on right: 183
    186 188
$@10 (156)
    on left: 194, on right: 195
$@11 (157)
    on left: 198, on right: 199
$@12 (158)
    on left: 202, on right: 204
$@13 (159)
    on left: 203, on right: 204
$@14 (160)
    on left: 205, on right: 206
gctnlist (161)
    on left: 208 209, on right: 186 187 190 209
zgnlist (162)
    on left: 210 211, on right: 13 41 42 188 211
gctname (163)
    on left: 212 213 214, on right: 208 209
gcnlist (164)
    on left: 215 216, on right: 185 188 189 190 216
gcname (165)
    on left: 217 218, on right: 215 216
enum (166)
    on left: 219 220 221 222, on right: 204 206 221 222
tname (167)
    on left: 223 224 225 226 227 228 229 230 231, on right: 184 187
    189 190 212
cname (168)
    on left: 232 233 234 235 236 237 238, on right: 214 218
gname (169)
    on left: 239 240 241, on right: 211 213 217
name (170)
    on left: 242, on right: 64 160
tag (171)
    on left: 243, on right: 14 37
ltag (172)
    on left: 244 245, on right: 53 96 156 157 193 195 197 199 201 204
    243


state 0

    0 $accept: . prog $end

    $default  reduce using rule 1 (prog)

    prog  go to state 1


state 1

    0 $accept: prog . $end
    2 prog: prog . xdecl

    $end       shift, and go to state 2
    LTYPE      shift, and go to state 3
    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LSTRUCT    shift, and go to state 14
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNION     shift, and go to state 17
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LENUM      shift, and go to state 20
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    LTYPE     [reduce using rule 181 (zctlist)]
    $default  reduce using rule 181 (zctlist)

    xdecl    go to state 26
    zctlist  go to state 27
    types    go to state 28
    ctlist   go to state 29
    complex  go to state 30
    gcnlist  go to state 31
    gcname   go to state 32
    tname    go to state 33
    cname    go to state 34
    gname    go to state 35


state 2

    0 $accept: prog $end .

    $default  accept


state 3

  207 complex: LTYPE .

    $default  reduce using rule 207 (complex)


state 4

  232 cname: LAUTO .

    $default  reduce using rule 232 (cname)


state 5

  223 tname: LCHAR .

    $default  reduce using rule 223 (tname)


state 6

  230 tname: LDOUBLE .

    $default  reduce using rule 230 (tname)


state 7

  234 cname: LEXTERN .

    $default  reduce using rule 234 (cname)


state 8

  229 tname: LFLOAT .

    $default  reduce using rule 229 (tname)


state 9

  225 tname: LINT .

    $default  reduce using rule 225 (tname)


state 10

  226 tname: LLONG .

    $default  reduce using rule 226 (tname)


state 11

  237 cname: LREGISTER .

    $default  reduce using rule 237 (cname)


state 12

  224 tname: LSHORT .

    $default  reduce using rule 224 (tname)


state 13

  233 cname: LSTATIC .

    $default  reduce using rule 233 (cname)


state 14

  193 complex: LSTRUCT . ltag
  195        | LSTRUCT . ltag $@10 sbody
  196        | LSTRUCT . sbody

    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37
    '{'    shift, and go to state 38

    sbody  go to state 39
    ltag   go to state 40


state 15

  235 cname: LTYPEDEF .

    $default  reduce using rule 235 (cname)


state 16

  236 cname: LTYPESTR .

    $default  reduce using rule 236 (cname)


state 17

  197 complex: LUNION . ltag
  199        | LUNION . ltag $@11 sbody
  200        | LUNION . sbody

    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37
    '{'    shift, and go to state 38

    sbody  go to state 41
    ltag   go to state 42


state 18

  228 tname: LUNSIGNED .

    $default  reduce using rule 228 (tname)


state 19

  231 tname: LVOID .

    $default  reduce using rule 231 (tname)


state 20

  201 complex: LENUM . ltag
  204        | LENUM . ltag $@12 '{' $@13 enum '}'
  206        | LENUM . '{' $@14 enum '}'

    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37
    '{'    shift, and go to state 43

    ltag  go to state 44


state 21

  227 tname: LSIGNED .

    $default  reduce using rule 227 (tname)


state 22

  239 gname: LCONSTNT .

    $default  reduce using rule 239 (gname)


state 23

  240 gname: LVOLATILE .

    $default  reduce using rule 240 (gname)


state 24

  241 gname: LRESTRICT .

    $default  reduce using rule 241 (gname)


state 25

  238 cname: LINLINE .

    $default  reduce using rule 238 (cname)


state 26

    2 prog: prog xdecl .

    $default  reduce using rule 2 (prog)


state 27

    3 xdecl: zctlist . ';'
    4      | zctlist . xdlist ';'
    7      | zctlist . xdecor $@1 pdecl $@2 block

    ';'    shift, and go to state 45
    '*'    shift, and go to state 46
    '('    shift, and go to state 47
    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37

    xdlist   go to state 48
    xdecor   go to state 49
    xdecor2  go to state 50
    tag      go to state 51
    ltag     go to state 52


state 28

  192 ctlist: types .

    $default  reduce using rule 192 (ctlist)


state 29

  182 zctlist: ctlist .

    $default  reduce using rule 182 (zctlist)


state 30

  183 types: complex .
  186      | complex . gctnlist

    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    $default  reduce using rule 183 (types)

    gctnlist  go to state 53
    gctname   go to state 54
    tname     go to state 55
    cname     go to state 56
    gname     go to state 57


state 31

  185 types: gcnlist .
  188      | gcnlist . complex zgnlist
  189      | gcnlist . tname
  190      | gcnlist . tname gctnlist
  216 gcnlist: gcnlist . gcname

    LTYPE      shift, and go to state 3
    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LSTRUCT    shift, and go to state 14
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNION     shift, and go to state 17
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LENUM      shift, and go to state 20
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    LTYPE     [reduce using rule 185 (types)]
    $default  reduce using rule 185 (types)

    complex  go to state 58
    gcname   go to state 59
    tname    go to state 60
    cname    go to state 34
    gname    go to state 35


state 32

  215 gcnlist: gcname .

    $default  reduce using rule 215 (gcnlist)


state 33

  184 types: tname .
  187      | tname . gctnlist

    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    $default  reduce using rule 184 (types)

    gctnlist  go to state 61
    gctname   go to state 54
    tname     go to state 55
    cname     go to state 56
    gname     go to state 57


state 34

  218 gcname: cname .

    $default  reduce using rule 218 (gcname)


state 35

  217 gcname: gname .

    $default  reduce using rule 217 (gcname)


state 36

  244 ltag: LNAME .

    $default  reduce using rule 244 (ltag)


state 37

  245 ltag: LTYPE .

    $default  reduce using rule 245 (ltag)


state 38

  180 sbody: '{' . @9 edecl '}'

    $default  reduce using rule 179 (@9)

    @9  go to state 62


state 39

  196 complex: LSTRUCT sbody .

    $default  reduce using rule 196 (complex)


state 40

  193 complex: LSTRUCT ltag .
  195        | LSTRUCT ltag . $@10 sbody

    '{'       reduce using rule 194 ($@10)
    $default  reduce using rule 193 (complex)

    $@10  go to state 63


state 41

  200 complex: LUNION sbody .

    $default  reduce using rule 200 (complex)


state 42

  197 complex: LUNION ltag .
  199        | LUNION ltag . $@11 sbody

    '{'       reduce using rule 198 ($@11)
    $default  reduce using rule 197 (complex)

    $@11  go to state 64


state 43

  206 complex: LENUM '{' . $@14 enum '}'

    $default  reduce using rule 205 ($@14)

    $@14  go to state 65


state 44

  201 complex: LENUM ltag .
  204        | LENUM ltag . $@12 '{' $@13 enum '}'

    '{'       reduce using rule 202 ($@12)
    $default  reduce using rule 201 (complex)

    $@12  go to state 66


state 45

    3 xdecl: zctlist ';' .

    $default  reduce using rule 3 (xdecl)


state 46

   13 xdecor: '*' . zgnlist xdecor

    $default  reduce using rule 210 (zgnlist)

    zgnlist  go to state 67


state 47

   15 xdecor2: '(' . xdecor ')'

    '*'    shift, and go to state 46
    '('    shift, and go to state 47
    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37

    xdecor   go to state 68
    xdecor2  go to state 50
    tag      go to state 51
    ltag     go to state 52


state 48

    4 xdecl: zctlist xdlist . ';'
   11 xdlist: xdlist . ',' xdlist

    ';'  shift, and go to state 69
    ','  shift, and go to state 70


state 49

    7 xdecl: zctlist xdecor . $@1 pdecl $@2 block
    8 xdlist: xdecor .
   10       | xdecor . $@3 '=' init

    ';'       reduce using rule 8 (xdlist)
    ','       reduce using rule 8 (xdlist)
    '='       reduce using rule 9 ($@3)
    $default  reduce using rule 5 ($@1)

    $@1  go to state 71
    $@3  go to state 72


state 50

   12 xdecor: xdecor2 .
   16 xdecor2: xdecor2 . '(' zarglist ')'
   17        | xdecor2 . '[' zexpr ']'

    '['  shift, and go to state 73
    '('  shift, and go to state 74

    $default  reduce using rule 12 (xdecor)


state 51

   14 xdecor2: tag .

    $default  reduce using rule 14 (xdecor2)


state 52

  243 tag: ltag .

    $default  reduce using rule 243 (tag)


state 53

  186 types: complex gctnlist .
  209 gctnlist: gctnlist . gctname

    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    $default  reduce using rule 186 (types)

    gctname  go to state 75
    tname    go to state 55
    cname    go to state 56
    gname    go to state 57


state 54

  208 gctnlist: gctname .

    $default  reduce using rule 208 (gctnlist)


state 55

  212 gctname: tname .

    $default  reduce using rule 212 (gctname)


state 56

  214 gctname: cname .

    $default  reduce using rule 214 (gctname)


state 57

  213 gctname: gname .

    $default  reduce using rule 213 (gctname)


state 58

  188 types: gcnlist complex . zgnlist

    $default  reduce using rule 210 (zgnlist)

    zgnlist  go to state 76


state 59

  216 gcnlist: gcnlist gcname .

    $default  reduce using rule 216 (gcnlist)


state 60

  189 types: gcnlist tname .
  190      | gcnlist tname . gctnlist

    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    $default  reduce using rule 189 (types)

    gctnlist  go to state 77
    gctname   go to state 54
    tname     go to state 55
    cname     go to state 56
    gname     go to state 57


state 61

  187 types: tname gctnlist .
  209 gctnlist: gctnlist . gctname

    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    $default  reduce using rule 187 (types)

    gctname  go to state 75
    tname    go to state 55
    cname    go to state 56
    gname    go to state 57


state 62

  180 sbody: '{' @9 . edecl '}'

    LTYPE      shift, and go to state 3
    LAUTO      shift, and go to state 4
    LCHAR      shift, and go to state 5
    LDOUBLE    shift, and go to state 6
    LEXTERN    shift, and go to state 7
    LFLOAT     shift, and go to state 8
    LINT       shift, and go to state 9
    LLONG      shift, and go to state 10
    LREGISTER  shift, and go to state 11
    LSHORT     shift, and go to state 12
    LSTATIC    shift, and go to state 13
    LSTRUCT    shift, and go to state 14
    LTYPEDEF   shift, and go to state 15
    LTYPESTR   shift, and go to state 16
    LUNION     shift, and go to state 17
    LUNSIGNED  shift, and go to state 18
    LVOID      shift, and go to state 19
    LENUM      shift, and go to state 20
    LSIGNED    shift, and go to state 21
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24
    LINLINE    shift, and go to state 25

    edecl    go to state 78
    types    go to state 79
    tlist    go to state 80
    complex  go to state 30
    gcnlist  go to state 31
    gcname   go to state 32
    tname    go to state 33
    cname    go to state 34
    gname    go to state 35


state 63

  195 complex: LSTRUCT ltag $@10 . sbody

    '{'  shift, and go to state 38

    sbody  go to state 81


state 64

  199 complex: LUNION ltag $@11 . sbody

    '{'  shift, and go to state 38

    sbody  go to state 82


state 65

  206 complex: LENUM '{' $@14 . enum '}'

    LNAME  shift, and go to state 83

    enum  go to state 84


state 66

  204 complex: LENUM ltag $@12 . '{' $@13 enum '}'

    '{'  shift, and go to state 85


state 67

   13 xdecor: '*' zgnlist . xdecor
  211 zgnlist: zgnlist . gname

    '*'        shift, and go to state 46
    '('        shift, and go to state 47
    LNAME      shift, and go to state 36
    LTYPE      shift, and go to state 37
    LCONSTNT   shift, and go to state 22
    LVOLATILE  shift, and go to state 23
    LRESTRICT  shift, and go to state 24

    xdecor   go to state 86
    xdecor2  go to state 50
    gname    go to state 87
    tag      go to state 51
    ltag     go to state 52


state 68

   15 xdecor2: '(' xdecor . ')'

    ')'  shift, and go to state 88


state 69

    4 xdecl: zctlist xdlist ';' .

    $default  reduce using rule 4 (xdecl)


state 70

   11 xdlist: xdlist ',' . xdlist

    '*'    shift, and go to state 46
    '('    shift, and go to state 47
    LNAME  shift, and go to state 36
    LTYPE  shift, and go to state 37

    xdlist   go to state 89
    xdecor   go to state 90
    xdecor2  go to state 50
    tag      go to state 51
    ltag     go to state 52


state 71

    7 xdecl: zctlist xdecor $@1 . pdecl $@2 block

    $default  reduce using rule 24 (pdecl)

    pdecl  go to state 91


state 72

   10 xdlist: xdecor $@3 . '=' init

    '='  shift, and go to state 92


state 73

   17 xdecor2: xdecor2 '[' . zexpr ']'
